--- a/JavaEE/Learn_JavaWeb/src/Web/hello.html
+++ b/JavaEE/Learn_JavaWeb/src/Web/hello.html
@@ -58,5 +58,39 @@ hello world
     </tr>
 </table>
 
+<label>
+    账号
+    <input type="text">
+</label>
+<br>
+<label>
+    密码
+    <input type="password">
+</label>
+<br>
+<label>
+    性别:
+    <input type="radio" name="sex">男
+    <input type="radio" name="sex">女
+    <br>
+</label>
+<label>
+    爱好:
+    <input type="checkbox">吃饭 <input type="checkbox"> 睡觉 <input type="checkbox">打游戏
+    <br>
+</label>
+
+<input type="button" value="我是个按钮" onclick="alert('hello')">
+<br>
+
+<form action="test.html">
+    <input type="text" name="username">
+    <br>
+    <input type="password" name="password">
+    <br>
+    <input type="submit" value="提交">
+    <input type="reset" value="清空">
+</form>
+
 </body>
 </html>
